--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,32 @@
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
 }
+
+/* customSlick.css */
+
+.slick-list {
+    position: relative;
+    overflow: hidden;
+}
+
+.slick-list.shuffle-animation .slick-track {
+    animation: shuffle 0.5s ease-in-out;
+}
+
+@keyframes shuffle {
+    0% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-10px);
+    }
+    50% {
+        transform: translateX(10px);
+    }
+    75% {
+        transform: translateX(-10px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
