--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,10 @@
 /* styles/global.css */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wdth,wght,GRAD@0,8..144,50..150,854,-50..100;1,8..144,50..150,854,-50..100&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-* {
-    font-family: 'Roboto', sans-serif;
-}
+
 
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
@@ -47,3 +42,11 @@
         transform: translateX(0);
     }
 }
+
+
+.wrapper {
+    @apply px-[20px] md:px-[40px] lg:px-[72px];
+  }
+  .max-width {
+    @apply xl:max-w-7xl xl:mx-auto;
+  }
